--- a/common/lib/xmodule/xmodule/css/html/display.scss
+++ b/common/lib/xmodule/xmodule/css/html/display.scss
@@ -19,7 +19,10 @@ h2 {
   -webkit-font-smoothing: antialiased;
 }
 
-h3, h4, h5, h6 {
+h3,
+h4,
+h5,
+h6 {
   @include margin(0, 0, ($baseline/2), 0);
 
   font-weight: 600;
@@ -34,7 +37,7 @@ h4 {
 }
 
 h5 {
-  font-size: .83em;
+  font-size: 0.83em;
 }
 
 h6 {
@@ -48,7 +51,8 @@ p {
   color: $body-color;
 }
 
-em, i {
+em,
+i {
   font-style: italic;
 
   span {
@@ -56,7 +60,8 @@ em, i {
   }
 }
 
-strong, b {
+strong,
+b {
   font-weight: bold;
 
   span {
@@ -64,7 +69,9 @@ strong, b {
   }
 }
 
-p + p, ul + p, ol + p {
+p + p,
+ul + p,
+ol + p {
   margin-top: $baseline;
 }
 
@@ -72,7 +79,8 @@ blockquote {
   margin: 1em ($baseline*2);
 }
 
-ol, ul {
+ol,
+ul {
   // Using the lower level Bi App Sass mixin to avoid @padding conflicts with bourbon.
   @include bi-app-compact(padding, 0, 0, 0, 1em);
 
@@ -93,7 +101,11 @@ ul {
 }
 
 a {
-  &:link, &:visited, &:hover, &:active, &:focus {
+  &:link,
+  &:visited,
+  &:hover,
+  &:active,
+  &:focus {
     color: $blue;
   }
 }
@@ -124,7 +136,8 @@ table {
   border-collapse: collapse;
   font-size: 16px;
 
-  td, th {
+  td,
+  th {
     margin: $baseline 0;
     padding: ($baseline/2);
     border: 1px solid $gray-l3;
@@ -162,37 +175,37 @@ th {
     display: block;
     padding: ($baseline/4) 7px;
     border-radius: 5px;
-    opacity: .9;
+    opacity: 0.9;
     background: $white;
     color: $black;
     border: 2px solid $black;
-    
+
     .label {
       font-weight: bold;
     }
-    
+
     i {
       font-style: normal;
     }
   }
-  
+
   .image-link {
     @extend %ui-fake-link;
 
     position: relative;
     display: block;
-    
+
     .action-fullscreen {
       display: none;
       top: 10px;
       left: 10px;
     }
-    
+
     &:hover .action-fullscreen {
       display: block;
     }
   }
-  
+
   .image-modal {
     @extend %ui-fake-link;
     @extend %ui-depth5;
@@ -204,7 +217,7 @@ th {
     height: 100%;
     width: 100%;
     background-color: rgba(0, 0, 0, 0.7);
-  
+
     .image-content {
       position: relative;
       top: 2.5%;
@@ -213,10 +226,10 @@ th {
       width: 95%;
       margin: auto;
       overflow: hidden;
-      
+
       .image-wrapper {
         position: relative;
-        
+
         img {
           position: relative;
           display: block;
@@ -226,12 +239,12 @@ th {
           cursor: default;
         }
       }
-      
+
       .action-close {
         top: 10px;
         right: 10px;
       }
-      
+
       .image-controls {
         position: absolute;
         right: 10px;
@@ -239,16 +252,16 @@ th {
         margin: 0;
         padding: 0;
         list-style: none;
-          
+
         .image-control {
           position: relative;
           display: inline-block;
           margin: 0;
           padding: 0;
-          
+
           .modal-ui-icon {
             position: relative;
-            
+
             &.action-zoom-in {
               margin-right: ($baseline/4);
             }
@@ -265,17 +278,17 @@ th {
         }
       }
     }
-    
+
     &.image-is-fit-to-screen {
       display: block;
-      
+
       // !important used here to override jQuery.
       .image-content .image-wrapper {
         top: 0 !important;
         left: 0 !important;
         width: 100% !important;
         height: 100% !important;
-        
+
         img {
           top: 0 !important;
           left: 0 !important;
@@ -285,7 +298,7 @@ th {
 
     &.image-is-zoomed {
       display: block;
-      
+
       .image-content .image-wrapper {
         img {
           max-width: none;
