--- a/lms/static/sass/course/courseware/_courseware.scss
+++ b/lms/static/sass/course/courseware/_courseware.scss
@@ -19,6 +19,11 @@ html.video-fullscreen {
   @extend %ui-print-excluded;
 
   margin: ($baseline/2) ($baseline/4) 0 0;
+  display: none;
+
+  @include media-breakpoint-up(md) {
+    display: block;
+  }
 
   &.studio-view {
     margin: 0;
@@ -100,12 +105,20 @@ html.video-fullscreen {
   }
 }
 
-// TO-DO should this be content wrapper?
 .course-wrapper {
   position: relative;
 
   .courseware-results-wrapper {
     display: none;
+  }
+
+  .page-header {
+    // Hide the header for mobile sizes
+    display: none;
+
+    @include media-breakpoint-up(md) {
+      display: block;
+    }
   }
 
   main {
