--- a/lms/static/sass/base/_base.scss
+++ b/lms/static/sass/base/_base.scss
@@ -276,11 +276,12 @@ mark {
 
   &:focus,
   &:active {
-    @include left(50%);
+    @include left(45%);
     @include margin-left(-1 * $baseline * 1.5);
+
     position: absolute;
     top: $baseline/4;
-    width: auto;
+    width: 10%;
     height: auto;
     background-color: black;
     margin: 0;
@@ -288,5 +289,13 @@ mark {
     color: white !important;
     text-decoration: none !important;
     outline: none;
+
+
+    // Responsive styling for mobile
+    @include media-breakpoint-down(md) {
+      @include left(40%);
+
+      width: 20%;
+    }
   }
 }
