A11Y Update to wiki edit field.
EDUCATOR-1553

--- a/lms/templates/wiki/includes/editor_widget.html
+++ b/lms/templates/wiki/includes/editor_widget.html
@@ -1,5 +1,6 @@
 {% load i18n %}
 <textarea {{ attrs }}>{{ content }}</textarea>
+<input aria-describedby="hint_id_content" id="id_summary" name="summary" type="text">
 <p id="hint_id_content" class="help-block">
     {% blocktrans with start_link="<a id='cheatsheetLink' href='#cheatsheetModal' rel='leanModal'>" end_link="</a>" %}
         Markdown syntax is allowed. See the {{ start_link }}cheatsheet{{ end_link }} for help.
