--- a/lms/templates/wiki/includes/editor_widget.html
+++ b/lms/templates/wiki/includes/editor_widget.html
@@ -1,7 +1,6 @@
 {% load i18n %}
 <textarea {{ attrs }}>{{ content }}</textarea>
-<input aria-describedby="hint_id_content" id="id_content" name="content" type="text">
-<p id="hint_id_content" class="help-block">
+<p id="hint_id_content" aria-describedby="hint_id_content" class="help-block">
     {% blocktrans with start_link="<a id='cheatsheetLink' href='#cheatsheetModal' rel='leanModal'>" end_link="</a>" %}
         Markdown syntax is allowed. See the {{ start_link }}cheatsheet{{ end_link }} for help.
     {% endblocktrans %}
